Added NavigationServlet, added EditVehicleServlet, as well as modified some existing files, and added a few more files.

--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <form action= "addVehicleServlet" method= "post">
-Model: <input type= "text" name= "model">
-Make: <input type= "text" name= "makel">
-Drive Train: <input type= "text" name= "driveTrain">
+Model(Fusion): <input type= "text" name= "model">
+Make(Ford): <input type= "text" name= "makel">
+Drive Train(4wd, front wheel drive, back wheel drive): <input type= "text" name= "driveTrain">
 Price: <input type= "text" name= "price">
-Date Added: <input type= "text" name= "dateAdded">
+Date Added (mm/dd/yy): <input type= "text" name= "dateAdded">
 <input type= "submit" value= "Add Vehicle">
 </form><br />
 <a href= "viewAllVehiclesServlet">View the complete list</a>
