--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <form action= "addVehicleServlet" method= "post">
-Model(Fusion): <input type= "text" name= "model">
-Make(Ford): <input type= "text" name= "makel">
-Drive Train(4wd, front wheel drive, back wheel drive): <input type= "text" name= "driveTrain">
-Price: <input type= "text" name= "price">
-Date Added (mm/dd/yy): <input type= "text" name= "dateAdded">
+Model(Fusion): <input type= "text" name= "model"><br/>
+Make(Ford): <input type= "text" name= "makel"><br/>
+Drive Train(4wd, fwd, rwd): <input type= "text" name= "driveTrain"><br/>
+Price: <input type= "text" name= "price"><br/>
+Date Added (mm/dd/yyyy): <input type= "text" name= "dateAdded"><br/>
 <input type= "submit" value= "Add Vehicle">
 </form><br />
 <a href= "viewAllVehiclesServlet">View the complete list</a>
