changed webpage paths

--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -5,14 +5,9 @@
 <title>Add a Vehicle</title>
 </head>
 <body>
-<form action= "addVehicleServlet" method= "post">
-Model(Fusion): <input type= "text" name= "model"><br/>
-Make(Ford): <input type= "text" name= "makel"><br/>
-Drive Train(4wd, fwd, rwd): <input type= "text" name= "driveTrain"><br/>
-Price: <input type= "text" name= "price"><br/>
-Date Added (mm/dd/yyyy): <input type= "text" name= "dateAdded"><br/>
-<input type= "submit" value= "Add Vehicle">
-</form><br />
-<a href= "viewAllVehiclesServlet">View the complete list</a>
+
+<!--<a href= "viewAllVehiclesServlet">View the complete list of vehicles</a>-->
+<a href= "addLot.jsp">Dealership menu</a>
+<a href= "modelIndex.html">Vehicle Model menu</a>
 </body>
 </html>
