getting errors executing the addvehicleservlet

--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Add a Vehicle</title>
+<title>Car Dealership</title>
 </head>
 <body>
 
 <!--<a href= "viewAllVehiclesServlet">View the complete list of vehicles</a>-->
-<a href= "addLot.jsp">Dealership menu</a>
+<a href= "addLot.jsp">Dealership menu</a><br/>
 <a href= "modelIndex.html">Vehicle Model menu</a>
 </body>
 </html>
