--- a/CarDealership/src/main/webapp/modelIndex.html
+++ b/CarDealership/src/main/webapp/modelIndex.html
@@ -14,5 +14,6 @@ Date Added (mm/dd/yyyy): <input type= "text" name= "dateAdded"><br/>
 <input type= "submit" value= "Add Vehicle">
 </form><br />
 <a href= "viewAllVehiclesServlet">View the complete list</a>
+<a href= "index.html">Return to home page</a>
 </body>
 </html>
