addvehicleservlet fatal errors fixed now

--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -8,6 +8,6 @@
 
 <!--<a href= "viewAllVehiclesServlet">View the complete list of vehicles</a>-->
 <a href= "addLot.jsp">Dealership menu</a><br/>
-<a href= "modelIndex.html">Vehicle Model menu</a>
+<a href= "modelIndex.jsp">Vehicle Model menu</a>
 </body>
 </html>
