--- a/CarDealership/src/main/webapp/index.html
+++ b/CarDealership/src/main/webapp/index.html
@@ -8,6 +8,9 @@
 
 <!--<a href= "viewAllVehiclesServlet">View the complete list of vehicles</a>-->
 <a href= "addLot.jsp">Dealership menu</a><br/>
-<a href= "modelIndex.jsp">Vehicle Model menu</a>
+<a href= "modelIndex.jsp">Vehicle Model menu</a><br/>
+<a href= "viewAllCatalogsServlet">View all catalogs</a><br />
+<a href= "addVehiclesForCatalogServlet">Create a new catalog</a>
+
 </body>
 </html>
